# redissyncer-scenariotest-rs

./: .compare_status  .current_compare  .gitignore  Cargo.toml  a.yml  bigkey_template.yml  compare_sample.yml  config.yml  config_default.yml  continuous_gen_data_template.yml  m2c.yml  m2s.yml  m2s_2.yml  sd.yml  single2cluster.yml  single2single.yml
compare_yaml_example/: single2single-rs.yml
docs/: ToDo.md  build.md
examples/: callback.rs  daemon_sample.rs  multithread.rs  multithread_write_one_file.rs  redisclustersample.rs  redisscan.rs  rmp_sample.rs  scaniter.rs  threadinthread.rs
src/: main.rs
src/cmd/: cmdcompare.rs  cmdconfig.rs  cmdgendata.rs  mod.rs  rootcmd.rs
src/commons/: mod.rs  subcmdcompleter.rs
src/compare/: compare_db.rs  compare_db.rs_bak  compare_error.rs  compare_from_file.rs  comparekey.rs  comparekey.rs_bak  mod.rs  rediscompare.rs
src/configure/: config_global.rs
src/interact/: cli.rs
src/logger/: logger.rs
src/redisdatagen/: gencmddata.rs  gendatabyduration.rs  generator.rs  mod.rs
src/request/: mod.rs  req.rs  requestmodules.rs  responsepaser.rs
src/util/: mod.rs  random.rs  redis_meta.rs  redis_util.rs  yaml_util.rs
