[package]
name = "rediscompare-rs"
version = "0.1.0"
authors = ["jiashiwen"]
edition = "2021"
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# To use 'RUSTFLAGS="$RUSTFLAGS -A dead_code" cargo build' not desplay dead_code warning

[dependencies]
clap = "3.1.7"
rustyline = "9.1.2"
shellwords = "1.1.0"
log = "0.4.16"
log4rs = "1.1.1"
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.68"
serde_yaml = "0.8"
memchr = "2.4.1"
rustyline-derive = "0.6.0"
lazy_static = "1.4.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
url = "2.2.2"
prettytable-rs = "^0.8"
anyhow = "1.0.56"
sysinfo = "0.23.6"
chrono = "0.4.19"
futures = "0.3"
redis = { version = "0.21.5", features = ["default", "tokio-comp", "async-std-comp", "cluster"] }
rand = "0.8.5"
enum-iterator = "1.1.3"
rayon = "1.5.3"
crossbeam = "0.8.2"



[[example]]
name = "multithread"
path = "examples/multithread.rs"

[[example]]
name = "threadinthread"
path = "examples/threadinthread.rs"

[[example]]
name = "redisscan"
path = "examples/redisscan.rs"

[[example]]
name = "callback"
path = "examples/callback.rs"


